--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
-    "styled-components": "^6.1.11"
+    "react-type-animation": "^3.2.0",
+    "styled-components": "^6.1.11",
+    "typeit-react": "^2.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
