--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "run:dev": "cls && vite",
+    "run:build": "tsc -b && vite build",
+    "run:lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "run:preview": "vite preview",
+    "run:emulators": "cls && firebase emulators:start"
   },
   "dependencies": {
     "firebase": "^10.12.3",
