--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://migplayer6032.github.io/schoolish",
+  "homepage": "https://schoolish.vercel.app",
   "scripts": {
     "dev": "cls && vite",
     "build": "tsc -b && vite build",
@@ -14,6 +14,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "firebase": "^10.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
